--- a/Deep_Learning_From_scratch.ipynb
+++ b/Deep_Learning_From_scratch.ipynb
@@ -6,8 +6,8 @@
     "collapsed": true
    },
    "source": [
-    "# CS-GY 9223-E: Deep Learning Homework 1\n",
-    "This is an example of implementing a Deep Learning Neural Network from scratch using python."
+    
+    "# This is an example of implementing a Deep Learning Neural Network from scratch using python."
    ]
   },
   {
